2024-08-31T00:39:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10640909065 # 404
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-31
* notice: last 14d: unq all: 3 4
* notice: prev accum: outdated-unq outdated-all / unq all: 690 1161 / 693 1164
* notice: next accum: outdated-unq outdated-all / unq all: 690 1161 / 694 1165
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-08-30]

2024-08-30T00:39:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10624777785 # 403
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-30
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 690 1161 / 691 1162
* notice: next accum: outdated-unq outdated-all / unq all: 690 1161 / 693 1164
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2024-08-29]

2024-08-28T00:38:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10588057709 # 401
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-28
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 689 1160 / 690 1161
* notice: next accum: outdated-unq outdated-all / unq all: 690 1161 / 691 1162
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-07-23] / [2024-08-27]

2024-07-24T00:38:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10068445662 # 366