@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-08-31T00:39:34Z",
+  "timestamp" : "2024-09-05T00:39:57Z",
   "count_outdated" : 1161,
   "uniques_outdated" : 690,
-  "count" : 1165,
-  "uniques" : 694,
+  "count" : 1166,
+  "uniques" : 695,
   "clones" : [
     {
       "timestamp": "2024-08-27T00:00:00Z",
@@ -25,6 +25,15 @@
     },
     {
       "timestamp": "2024-08-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-09-04T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
