@@ -1,6 +1,6 @@
 {
-  "count": 4,
-  "uniques": 3,
+  "count": 5,
+  "uniques": 4,
   "clones": [
     {
       "timestamp": "2024-08-27T00:00:00Z",
@@ -14,6 +14,11 @@
     },
     {
       "timestamp": "2024-08-30T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-09-04T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
