@@ -1,3 +1,12 @@
+2024-09-05T00:39:57Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10711746209 # 409
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-05
+* notice: last 14d: unq all: 4 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 690 1161 / 694 1165
+* notice: next accum: outdated-unq outdated-all / unq all: 690 1161 / 695 1166
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-09-04]
+
 2024-08-31T00:39:34Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10640909065 # 404
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-31
